Fix contention on addProblem in big projects